interval may working

--- a/mpi/Makefile.am
+++ b/mpi/Makefile.am
@@ -39,15 +39,25 @@ MPI_MODEL = \
 	$(srcdir)/mpi_model.rb \
 	$(srcdir)/mpi_meta_parameters.yaml \
 	$(srcdir)/gen_probe_base.rb \
+	$(srcdir)/mpi_events.yaml \
 	$(top_srcdir)/utils/yaml_ast.rb \
 	$(top_srcdir)/utils/yaml_ast_lttng.rb \
 	$(top_srcdir)/utils/meta_parameters.rb \
 	$(top_srcdir)/utils/LTTng.rb \
 	$(MPI_EXTRACTED)
 
+mpi_babeltrace_model.yaml: $(srcdir)/gen_babeltrace_mpi_model.rb $(MPI_MODEL)
+	SRC_DIR=$(srcdir) $(RUBY) $< > $@
+
+CLEANFILES += \
+	mpi_babeltrace_model.yaml
+
 EXTRA_DIST += \
 	mpi_model.rb \
+	gen_mpi_library_base.rb \
 	gen_probe_base.rb \
+	mpi_events.yaml \
+	gen_babeltrace_mpi_model.rb \
 	$(srcdir)/mpi_meta_parameters.yaml
 
 MPI_PROBES = mpi_tracepoints
@@ -96,9 +106,6 @@ libmpitracepoints_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/incl
 libmpitracepoints_la_CFLAGS = -fPIC -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Wno-sign-compare $(WERROR) $(LTTNG_UST_CFLAGS)
 libmpitracepoints_la_LDFLAGS = $(LTTNG_UST_LIBS)
 
-lib_LTLIBRARIES = \
-	libTracerMPI.la
-
 nodist_libTracerMPI_la_SOURCES = \
 	$(MPI_PROBES_INCL) \
 	tracer_mpi.c
@@ -124,4 +131,72 @@ install-data-hook:
 	$(RM) -r $(DESTDIR)$(tmplibdir)
 
 EXTRA_DIST += mpi.h.include
+
+mpi_library.rb: $(srcdir)/gen_mpi_library.rb $(MPI_MODEL)
+	SRC_DIR=$(srcdir) $(RUBY) $< > $@
+
+babeltrace_mpi_lib.rb: $(srcdir)/gen_babeltrace_mpi_lib.rb $(top_srcdir)/utils/gen_library_base.rb $(MPI_MODEL) mpi_babeltrace_model.yaml
+	SRC_DIR=$(srcdir) $(RUBY) $< > $@
+
+MPI_BINDINGS = \
+	mpi_library.rb \
+	babeltrace_mpi_lib.rb
+
+EXTRA_DIST += \
+	gen_mpi_library.rb \
+	gen_babeltrace_mpi_lib.rb
+
+CLEANFILES += \
+	$(MPI_BINDINGS)
+
+data_DATA = \
+	$(MPI_BINDINGS)
+
+xprof_utils.hpp: $(top_srcdir)/utils/xprof_utils.hpp
+	cp $< $@
+
+BTX_MPI_GENERATED = \
+	btx_filter_mpi/metababel/metababel.h \
+	btx_filter_mpi/metababel/btx_component.h \
+	btx_filter_mpi/metababel/btx_component.c \
+	btx_filter_mpi/metababel/btx_upstream.h \
+	btx_filter_mpi/metababel/btx_upstream.c \
+	btx_filter_mpi/metababel/btx_downstream.h \
+	btx_filter_mpi/metababel/btx_downstream.c \
+	btx_filter_mpi/btx_main.c
+
+EXTRA_DIST += \
+	$(top_srcdir)/utils/babeltrace_to_metababel_model.rb \
+	$(top_srcdir)/xprof/btx_interval_model.yaml \
+	btx_mpimatching_model.yaml
+
+btx_mpi_model.yaml: $(top_srcdir)/utils/babeltrace_to_metababel_model.rb mpi_babeltrace_model.yaml
+	SRC_DIR=$(srcdir) $(RUBY) $^ > $@
+
+$(BTX_MPI_GENERATED) &: $(top_srcdir)/xprof/btx_interval_model.yaml btx_mpimatching_model.yaml btx_mpi_model.yaml
+	$(METABABEL) -u btx_mpi_model.yaml -d $(top_srcdir)/xprof/btx_interval_model.yaml -t FILTER -o btx_filter_mpi -p mpiinterval -c interval --matching $(srcdir)/btx_mpimatching_model.yaml -i mpi.h.include
+
+CLEANFILES += \
+	$(BTX_MPI_GENERATED) \
+	btx_mpi_model.yaml \
+	xprof_utils.hpp
+
+BUILT_SOURCES += \
+	$(BTX_MPI_GENERATED)
+
+nodist_libMPIInterval_la_SOURCES = \
+	$(BTX_MPI_GENERATED) \
+	xprof_utils.hpp
+
+libMPIInterval_la_SOURCES = \
+	btx_mpiinterval_callbacks.cpp
+
+libMPIInterval_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./ -I./btx_filter_mpi
+libMPIInterval_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
+libMPIInterval_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
+libMPIInterval_la_LDFLAGS = $(BABELTRACE2_LIBS) -avoid-version -module
+
+lib_LTLIBRARIES = \
+	libTracerMPI.la \
+	libMPIInterval.la
 
