--- a/mpi/Makefile.in
+++ b/mpi/Makefile.in
@@ -431,7 +431,7 @@ MPI_MODEL = \
 	$(srcdir)/mpi_model.rb \
 	$(srcdir)/mpi_meta_parameters.yaml \
 	$(srcdir)/gen_probe_base.rb \
-        $(srcdir)/mpi_events.yaml \
+	$(srcdir)/mpi_events.yaml \
 	$(top_srcdir)/utils/yaml_ast.rb \
 	$(top_srcdir)/utils/yaml_ast_lttng.rb \
 	$(top_srcdir)/utils/meta_parameters.rb \
@@ -1045,12 +1045,16 @@ tracer_mpi.c: $(srcdir)/gen_mpi.rb $(MPI_MODEL) $(MPI_PROBES_INCL)
 install-exec-hook:
 	$(MKDIR_P) $(DESTDIR)$(pkglibdir)/mpi
 	$(LN_S) -f $(DESTDIR)$(libdir)/libTracerMPI.so.1.0.0 $(DESTDIR)$(pkglibdir)/mpi/libmpi.so.1
-	$(LN_S) -f $(DESTDIR)$(pkglibdir)/cuda/libmpi.so.1 $(DESTDIR)$(pkglibdir)/mpi/libmpi.so
+	$(LN_S) -f $(DESTDIR)$(pkglibdir)/mpi/libmpi.so.1 $(DESTDIR)$(pkglibdir)/mpi/libmpi.so
+	$(MKDIR_P) $(DESTDIR)$(pkglibdir)/bt2
+	$(LN) -f $(DESTDIR)$(libdir)/libMPIInterval.so $(DESTDIR)$(pkglibdir)/bt2/libMPIInterval.so
 
 uninstall-hook:
 	$(RM) -f $(DESTDIR)$(libdir)/libTracerMPI.so.1.0.0 $(DESTDIR)$(pkglibdir)/mpi/libmpi.so.1
 	$(RM) -f $(DESTDIR)$(pkglibdir)/mpi/libmpi.so.1 $(DESTDIR)$(pkglibdir)/mpi/libmpi.so
 	-rmdir $(DESTDIR)$(pkglibdir)/mpi
+	$(RM) -f $(DESTDIR)$(pkglibdir)/bt2/libMPIInterval.so
+	-rmdir $(DESTDIR)$(pkglibdir)/bt2
 install-data-hook:
 	$(RM) -r $(DESTDIR)$(tmplibdir)
 
