--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -52,6 +52,22 @@ def exec(cmd, opts: {}, debug: true)
   stdout_str
 end
 
+def exec_thapi_ctl(command, session_id, backends)
+  ENV['LTTNG_HOME'] = lttng_home_dir
+  # Used by C api thapi_start/thapi_stop
+  ENV['THAPI_LTTNG_SESSION_ID'] = lttng_session_uuid
+  ENV['THAPI_CTL_LOG_LEVEL'] = "4"
+  backends.each do |name|
+    ENV['THAPI_LTTNG_BACKEND_#{name}_ENABLED'] = '1'
+  end
+  channel_name = 'blocking-channel'
+  # exec("lttng list --channel #{channel_name} --userspace #{lttng_session_uuid}")
+  # exec("thapi-ctl list")
+  exec("thapi-ctl #{command}")
+  # exec("thapi-ctl list")
+  # exec("lttng list --channel #{channel_name} --userspace #{lttng_session_uuid}")
+end
+
 #    _
 #   |_ |\ | \  /
 #   |_ | \|  \/
@@ -322,10 +338,6 @@ def lttng_session_uuid
   Digest::MD5.hexdigest(lttng_trace_dir_tmp)
 end
 
-def lttng_session_uuid_bookkeeping
-  lttng_session_uuid + "-bookkeeping"
-end
-
 def sampling?
   return false unless OPTIONS[:sample]
 
@@ -469,15 +481,15 @@ def enable_events_ze(channel_name, tracing_mode: 'default', profiling: true)
 end
 
 def enable_events_cl(channel_name, tracing_mode: 'default', profiling: true)
-  lttng_enable_bookkeeping = "lttng enable-event --userspace --session=#{lttng_session_uuid_bookkeeping} --channel=#{channel_name}"
-  bookkeeping_events = [
-    "lttng_ust_opencl:clGetDeviceIDs",
-    "lttng_ust_opencl:clCreatSubDevices",
-    "lttng_ust_opencl:clCreateCommandQueue",
-    "lttng_ust_opencl_arguments:kernel_info",
-  ]
-  exec("#{lttng_enable_bookkeeping} #{bookkeeping_events.join(',')}")
-
+  # lttng_enable_bookkeeping = "lttng enable-event --userspace --session=#{lttng_session_uuid_bookkeeping} --channel=#{channel_name}"
+  # bookkeeping_events = [
+  #   "lttng_ust_opencl:clGetDeviceIDs",
+  #   "lttng_ust_opencl:clCreatSubDevices",
+  #   "lttng_ust_opencl:clCreateCommandQueue",
+  #   "lttng_ust_opencl_arguments:kernel_info",
+  # ]
+  # exec("#{lttng_enable_bookkeeping} #{bookkeeping_events.join(',')}")
+  #
   lttng_enable = "lttng enable-event --userspace --session=#{lttng_session_uuid} --channel=#{channel_name}"
   case tracing_mode
   when 'full'
@@ -497,7 +509,7 @@ def enable_events_cl(channel_name, tracing_mode: 'default', profiling: true)
     # So we enable and disable on the same line
     opencl_disable = ['lttng_ust_opencl:clSetKernelArg*', 'lttng_ust_opencl:clGetKernelArg*',
                       'lttng_ust_opencl:clSetKernelExecInfo*', 'lttng_ust_opencl:clGetKernelInfo*',
-                      'lttng_ust_opencl:clGetMemAllocInfoINTEL*'] + bookkeeping_events
+                      'lttng_ust_opencl:clGetMemAllocInfoINTEL*']
 
     exec("#{lttng_enable} lttng_ust_opencl:* -x #{opencl_disable.join(',')}")
   when 'minimal'
@@ -508,55 +520,55 @@ def enable_events_cl(channel_name, tracing_mode: 'default', profiling: true)
 end
 
 def enable_events_cuda(channel_name, tracing_mode: 'default', profiling: true)
-  lttng_enable_bookkeeping = "lttng enable-event --userspace --session=#{lttng_session_uuid_bookkeeping} --channel=#{channel_name}"
-  required_events = [
-    "lttng_ust_cuda:cuGetProcAddress_v2_entry",
-    "lttng_ust_cuda:cuGetProcAddress_v2_exit",
-  ].join(',')
-    #"lttng_ust_cuda:cuGetExportTable_entry",
-    #"lttng_ust_cuda:cuGetExportTable_exit"
-    #"lttng_ust_cuda:cuGetProcAddress_v2_entry",
-    #"lttng_ust_cuda:cuGetProcAddress_v2_exit",
-    #"lttng_ust_cuda:cuDeviceGetCount_entry",
-    #"lttng_ust_cuda:cuDeviceGetCount_exit",
-    #"lttng_ust_cuda:cuDeviceGet_entry",
-    #"lttng_ust_cuda:cuDeviceGet_exit",
-    #"lttng_ust_cuda:cuDeviceGetName_entry",
-    #"lttng_ust_cuda:cuDeviceGetName_exit",
-  bookkeeping_events = [
-    "lttng_ust_cuda:cuCtxCreate_entry",
-    "lttng_ust_cuda:cuCtxCreate_exit",
-    "lttng_ust_cuda:cuCtxCreate_v2_entry",
-    "lttng_ust_cuda:cuCtxCreate_v2_exit",
-    "lttng_ust_cuda:cuCtxCreate_v3_entry",
-    "lttng_ust_cuda:cuCtxCreate_v3_exit",
-    "lttng_ust_cuda:cuCtxDestroy_entry",
-    "lttng_ust_cuda:cuCtxDestroy_exit",
-    "lttng_ust_cuda:cuCtxDestroy_v2_entry",
-    "lttng_ust_cuda:cuCtxDestroy_v2_exit",
-    "lttng_ust_cuda:cuCtxSetCurrent_entry",
-    "lttng_ust_cuda:cuCtxSetCurrent_exit",
-    "lttng_ust_cuda:cuCtxPushCurrent_entry",
-    "lttng_ust_cuda:cuCtxPushCurrent_exit",
-    "lttng_ust_cuda:cuCtxPushCurrent_v2_entry",
-    "lttng_ust_cuda:cuCtxPushCurrent_v2_exit",
-    "lttng_ust_cuda:cuCtxPopCurrent_entry",
-    "lttng_ust_cuda:cuCtxPopCurrent_exit",
-    "lttng_ust_cuda:cuCtxPopCurrent_v2_entry",
-    "lttng_ust_cuda:cuCtxPopCurrent_v2_exit",
-    "lttng_ust_cuda:cuDevicePrimaryCtxRetain_entry",
-    "lttng_ust_cuda:cuDevicePrimaryCtxRetain_exit",
-    "lttng_ust_cuda:cuStreamCreate_entry",
-    "lttng_ust_cuda:cuStreamCreate_exit",
-    "lttng_ust_cuda:cuStreamCreateWithPriority_entry",
-    "lttng_ust_cuda:cuStreamCreateWithPriority_exit",
-    "lttng_ust_cuda:cuModuleGetFunction_entry",
-    "lttng_ust_cuda:cuModuleGetFunction_exit"
-  ].join(',')
-  exec("#{lttng_enable_bookkeeping} #{bookkeeping_events},#{required_events}")
-
+  # lttng_enable_bookkeeping = "lttng enable-event --userspace --session=#{lttng_session_uuid_bookkeeping} --channel=#{channel_name}"
+  # required_events = [
+  #   "lttng_ust_cuda:cuGetProcAddress_v2_entry",
+  #   "lttng_ust_cuda:cuGetProcAddress_v2_exit",
+  # ].join(',')
+  #   #"lttng_ust_cuda:cuGetExportTable_entry",
+  #   #"lttng_ust_cuda:cuGetExportTable_exit"
+  #   #"lttng_ust_cuda:cuGetProcAddress_v2_entry",
+  #   #"lttng_ust_cuda:cuGetProcAddress_v2_exit",
+  #   #"lttng_ust_cuda:cuDeviceGetCount_entry",
+  #   #"lttng_ust_cuda:cuDeviceGetCount_exit",
+  #   #"lttng_ust_cuda:cuDeviceGet_entry",
+  #   #"lttng_ust_cuda:cuDeviceGet_exit",
+  #   #"lttng_ust_cuda:cuDeviceGetName_entry",
+  #   #"lttng_ust_cuda:cuDeviceGetName_exit",
+  # bookkeeping_events = [
+  #   "lttng_ust_cuda:cuCtxCreate_entry",
+  #   "lttng_ust_cuda:cuCtxCreate_exit",
+  #   "lttng_ust_cuda:cuCtxCreate_v2_entry",
+  #   "lttng_ust_cuda:cuCtxCreate_v2_exit",
+  #   "lttng_ust_cuda:cuCtxCreate_v3_entry",
+  #   "lttng_ust_cuda:cuCtxCreate_v3_exit",
+  #   "lttng_ust_cuda:cuCtxDestroy_entry",
+  #   "lttng_ust_cuda:cuCtxDestroy_exit",
+  #   "lttng_ust_cuda:cuCtxDestroy_v2_entry",
+  #   "lttng_ust_cuda:cuCtxDestroy_v2_exit",
+  #   "lttng_ust_cuda:cuCtxSetCurrent_entry",
+  #   "lttng_ust_cuda:cuCtxSetCurrent_exit",
+  #   "lttng_ust_cuda:cuCtxPushCurrent_entry",
+  #   "lttng_ust_cuda:cuCtxPushCurrent_exit",
+  #   "lttng_ust_cuda:cuCtxPushCurrent_v2_entry",
+  #   "lttng_ust_cuda:cuCtxPushCurrent_v2_exit",
+  #   "lttng_ust_cuda:cuCtxPopCurrent_entry",
+  #   "lttng_ust_cuda:cuCtxPopCurrent_exit",
+  #   "lttng_ust_cuda:cuCtxPopCurrent_v2_entry",
+  #   "lttng_ust_cuda:cuCtxPopCurrent_v2_exit",
+  #   "lttng_ust_cuda:cuDevicePrimaryCtxRetain_entry",
+  #   "lttng_ust_cuda:cuDevicePrimaryCtxRetain_exit",
+  #   "lttng_ust_cuda:cuStreamCreate_entry",
+  #   "lttng_ust_cuda:cuStreamCreate_exit",
+  #   "lttng_ust_cuda:cuStreamCreateWithPriority_entry",
+  #   "lttng_ust_cuda:cuStreamCreateWithPriority_exit",
+  #   "lttng_ust_cuda:cuModuleGetFunction_entry",
+  #   "lttng_ust_cuda:cuModuleGetFunction_exit"
+  # ].join(',')
+  # exec("#{lttng_enable_bookkeeping} #{bookkeeping_events},#{required_events}")
+  #
   lttng_enable = "lttng enable-event --userspace --session=#{lttng_session_uuid} --channel=#{channel_name}"
-  exec("#{lttng_enable} lttng_ust_cuda:* -x #{bookkeeping_events}")
+  exec("#{lttng_enable} lttng_ust_cuda:*")
   exec("#{lttng_enable} #{required_events}")
   exec("#{lttng_enable} lttng_ust_cuda_properties")
   exec("#{lttng_enable} lttng_ust_cuda_profiling:*") if profiling
@@ -584,25 +596,24 @@ def setup_lttng(backends)
   #   if LTTNG_HOME doesn't exist
   FileUtils.mkdir_p(lttng_home_dir)
   FileUtils.mkdir_p(lttng_trace_dir_tmp)
-  FileUtils.mkdir_p(lttng_trace_dir_tmp + "/bookkeeping")
-  FileUtils.mkdir_p(lttng_trace_dir_tmp + "/main")
   exec('lttng-sessiond --daemonize')
-  # TODO: need different subdirs to merge later?
-  exec("lttng create #{lttng_session_uuid_bookkeeping} -o #{lttng_trace_dir_tmp}/bookkeeping")
-  exec("lttng create #{lttng_session_uuid} -o #{lttng_trace_dir_tmp}/main")
+  exec("lttng create #{lttng_session_uuid} -o #{lttng_trace_dir_tmp}")
 
   File.write(File.join(lttng_trace_dir_tmp, 'thapi_metadata.yaml'), { type: 'lttng' }.to_yaml)
 
   channel_name = 'blocking-channel'
 
-  exec("lttng enable-channel --userspace --session=#{lttng_session_uuid_bookkeeping} --blocking-timeout=inf #{channel_name}")
-  exec("lttng add-context    --userspace --session=#{lttng_session_uuid_bookkeeping} --channel=#{channel_name} -t vpid -t vtid")
-
   exec("lttng enable-channel --userspace --session=#{lttng_session_uuid} --blocking-timeout=inf #{channel_name}")
   exec("lttng add-context    --userspace --session=#{lttng_session_uuid} --channel=#{channel_name} -t vpid -t vtid")
 
   # Enable backend events
-  (backends + ['metadata']).each do |name|
+  exec_thapi_ctl("init", lttng_session_uuid, backends)
+  if OPTIONS[:'profile-from-start']
+    exec_thapi_ctl("start", lttng_session_uuid, backends)
+  end
+  exec("lttng list --channel #{channel_name} --userspace #{lttng_session_uuid}")
+
+  (['metadata']).each do |name|
     send("enable_events_#{name}", channel_name,
          tracing_mode: OPTIONS[:'tracing-mode'],
          profiling: OPTIONS[:profile])
@@ -619,10 +630,7 @@ def setup_lttng(backends)
     end
 
   end
-  exec("lttng start #{lttng_session_uuid_bookkeeping}")
-  if OPTIONS[:'profile-from-start']
-    exec("lttng start #{lttng_session_uuid}")
-  end
+  exec("lttng start #{lttng_session_uuid}")
 end
 
 def lttng_teardown_session
