--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -53,14 +53,15 @@ def exec(cmd, opts: {}, debug: true)
 end
 
 def exec_thapi_ctl(command, session_id, backends)
+  channel_name = lttng_blocking_channel_name
   ENV['LTTNG_HOME'] = lttng_home_dir
   # Used by C api thapi_start/thapi_stop
   ENV['THAPI_LTTNG_SESSION_ID'] = lttng_session_uuid
+  ENV['THAPI_LTTNG_CHANNEL_NAME'] = channel_name
   ENV['THAPI_CTL_LOG_LEVEL'] = "4"
   backends.each do |name|
     ENV['THAPI_LTTNG_BACKEND_#{name}_ENABLED'] = '1'
   end
-  channel_name = 'blocking-channel'
   # exec("lttng list --channel #{channel_name} --userspace #{lttng_session_uuid}")
   # exec("thapi-ctl list")
   exec("thapi-ctl #{command}")
@@ -338,6 +339,10 @@ def lttng_session_uuid
   Digest::MD5.hexdigest(lttng_trace_dir_tmp)
 end
 
+def lttng_blocking_channel_name()
+  'blocking-channel'
+end
+
 def sampling?
   return false unless OPTIONS[:sample]
 
@@ -445,7 +450,8 @@ def launch_usr_bin(env, cmd)
   end
 end
 
-def enable_events_ze(channel_name, tracing_mode: 'default', profiling: true)
+def enable_events_ze(channel_name, tracing_mode: 'default', profiling: true,
+                     profile_from_start: true)
   lttng_enable = "lttng enable-event --userspace --session=#{lttng_session_uuid} --channel=#{channel_name}"
   case tracing_mode
   when 'minimal'
@@ -480,7 +486,8 @@ def enable_events_ze(channel_name, tracing_mode: 'default', profiling: true)
   end
 end
 
-def enable_events_cl(channel_name, tracing_mode: 'default', profiling: true)
+def enable_events_cl(channel_name, tracing_mode: 'default', profiling: true,
+                     profile_from_start: true)
   # lttng_enable_bookkeeping = "lttng enable-event --userspace --session=#{lttng_session_uuid_bookkeeping} --channel=#{channel_name}"
   # bookkeeping_events = [
   #   "lttng_ust_opencl:clGetDeviceIDs",
@@ -519,7 +526,16 @@ def enable_events_cl(channel_name, tracing_mode: 'default', profiling: true)
   end
 end
 
-def enable_events_cuda(channel_name, tracing_mode: 'default', profiling: true)
+def enable_events_cuda(channel_name, tracing_mode: 'default', profiling: true,
+                       profile_from_start: true)
+  exec_thapi_ctl("init", lttng_session_uuid, ["cuda"])
+  if profile_from_start
+    exec_thapi_ctl("start", lttng_session_uuid, ["cuda"])
+  end
+  # exec("lttng list --channel #{channel_name} --userspace #{lttng_session_uuid}")
+  return
+
+
   # lttng_enable_bookkeeping = "lttng enable-event --userspace --session=#{lttng_session_uuid_bookkeeping} --channel=#{channel_name}"
   # required_events = [
   #   "lttng_ust_cuda:cuGetProcAddress_v2_entry",
@@ -574,17 +590,20 @@ def enable_events_cuda(channel_name, tracing_mode: 'default', profiling: true)
   exec("#{lttng_enable} lttng_ust_cuda_profiling:*") if profiling
 end
 
-def enable_events_hip(channel_name, tracing_mode: 'default', profiling: true)
+def enable_events_hip(channel_name, tracing_mode: 'default', profiling: true,
+                      profile_from_start: true)
   lttng_enable = "lttng enable-event --userspace --session=#{lttng_session_uuid} --channel=#{channel_name}"
   exec("#{lttng_enable} lttng_ust_hip:*")
 end
 
-def enable_events_omp(channel_name, tracing_mode: 'default', profiling: true)
+def enable_events_omp(channel_name, tracing_mode: 'default', profiling: true,
+                      profile_from_start: true)
   lttng_enable = "lttng enable-event --userspace --session=#{lttng_session_uuid} --channel=#{channel_name}"
   exec("#{lttng_enable} lttng_ust_ompt:*target*")
 end
 
-def enable_events_metadata(channel_name, tracing_mode: 'default', profiling: true)
+def enable_events_metadata(channel_name, tracing_mode: 'default', profiling: true,
+                           profile_from_start: true)
   lttng_enable = "lttng enable-event --userspace --session=#{lttng_session_uuid} --channel=#{channel_name}"
   exec("#{lttng_enable} lttng_ust_thapi:*")
 end
@@ -601,22 +620,17 @@ def setup_lttng(backends)
 
   File.write(File.join(lttng_trace_dir_tmp, 'thapi_metadata.yaml'), { type: 'lttng' }.to_yaml)
 
-  channel_name = 'blocking-channel'
+  channel_name = lttng_blocking_channel_name
 
   exec("lttng enable-channel --userspace --session=#{lttng_session_uuid} --blocking-timeout=inf #{channel_name}")
   exec("lttng add-context    --userspace --session=#{lttng_session_uuid} --channel=#{channel_name} -t vpid -t vtid")
 
   # Enable backend events
-  exec_thapi_ctl("init", lttng_session_uuid, backends)
-  if OPTIONS[:'profile-from-start']
-    exec_thapi_ctl("start", lttng_session_uuid, backends)
-  end
-  exec("lttng list --channel #{channel_name} --userspace #{lttng_session_uuid}")
-
-  (['metadata']).each do |name|
+  (backends + ['metadata']).each do |name|
     send("enable_events_#{name}", channel_name,
          tracing_mode: OPTIONS[:'tracing-mode'],
-         profiling: OPTIONS[:profile])
+         profiling: OPTIONS[:profile],
+         profile_from_start: OPTIONS[:'profile-from-start'])
   end
 
   if OPTIONS.include?(:sample)
@@ -718,6 +732,7 @@ def trace_and_on_node_processing(usr_argv)
 
     # Used by C api thapi_start/thapi_stop
     ENV['THAPI_LTTNG_SESSION_ID'] = lttng_session_uuid
+    ENV['THAPI_LTTNG_CHANNEL_NAME'] = lttng_blocking_channel_name
 
     # Only local master spawn LTTNG daemon and start session
     setup_lttng(backends) if mpi_local_master?
