--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -145,6 +145,7 @@ jobs:
         bats_file: ['mpi_sync_daemon', 'mpi_iprof']
         include:
           - bats_file: 'iprof'
+            thapi_sync_daemon: 'fs' # Need to force, if not `THAPI_SYNC_DAEMON` will be set to empty list
     env:
       THAPI_TEST_BIN: clinfo
       THAPI_BIN_DIR: ./build/ici/bin
