--- a/mpi/Makefile.am
+++ b/mpi/Makefile.am
@@ -106,7 +106,8 @@ tracer_mpi.c: $(srcdir)/gen_mpi.rb $(srcdir)/tracer_mpi_helpers.include.c $(MPI_
 
 EXTRA_DIST += \
 	gen_mpi.rb \
-	tracer_mpi_helpers.include.c
+	tracer_mpi_helpers.include.c \
+	gen_mpi_custom_probes.rb
 
 CLEANFILES += \
 	tracer_mpi.c
