--- a/xprof/btx_interval_model.yaml
+++ b/xprof/btx_interval_model.yaml
@@ -102,6 +102,11 @@
                 :type: integer_unsigned
                 :field_value_range: 64
                 :cast_type: uint64_t
+            - :name: hFrequency
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
             - :name: domain
               :field_class:
                 :type: integer_unsigned
@@ -117,6 +122,11 @@
           :type: structure
           :members:
             - :name: did
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: hPower
               :field_class:
                 :type: integer_unsigned
                 :field_value_range: 64
@@ -140,6 +150,11 @@
                 :type: integer_unsigned
                 :field_value_range: 64
                 :cast_type: uint64_t
+            - :name: hEngine
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
             - :name: subDevice
               :field_class:
                 :type: integer_unsigned
@@ -154,6 +169,11 @@
           :type: structure
           :members:
             - :name: did
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: hEngine
               :field_class:
                 :type: integer_unsigned
                 :field_value_range: 64
