--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -649,7 +649,7 @@ def trace_and_on_node_processing(usr_argv)
     # Stop Lttng session
     lttng_teardown_session
     # Lttng session is finished,
-    # we can kill the session-d
+    # we can kill the session daemon
     lttng_kill_sessiond
 
     # Preprocess trace
